--- a/.env
+++ b/.env
@@ -18,3 +18,12 @@
 APP_ENV=dev
 APP_SECRET=ecf092cbbeb9829963dd2e5e0c141be0
 ###< symfony/framework-bundle ###
+DATABASE_URL="mysql://root:root@127.0.0.1:3306/users"
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+ DATABASE_URL="mysql://root:root@127.0.0.1:3306/users?serverVersion=mariadb-10.4.8&charset=utf8mb4"
+#DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+###< doctrine/doctrine-bundle ###
